<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/Names"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BackLayout"
            android:layout_gravity="left|center_horizontal"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/person_firstname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/person_lastname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Names_Inserts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Names"
            android:layout_margin="20dp"
            android:gravity="left|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/firstname_Input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/firstname_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastname_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastname_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLabels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Names_Inserts"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/PassLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/ConfirmLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordInputs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/passwordLabels"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPassword_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/confirmPassword_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Randoms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordInputs"
            android:layout_gravity="left|center_horizontal"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/EmailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/person_email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Randoms"
            android:layout_margin="20dp"
            android:gravity="left|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/Email_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Email"
            android:orientation="vertical">
            <Button
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center|center_vertical"
                android:onClick="setContentView"
                android:text="@string/signUp_name"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>