...
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/View"
        android:orientation="vertical">

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="setContentView"
            android:text="@string/signIn_name"
            android:textSize="30sp"
            android:layout_below="@+id/register"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/View"
...
