<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bryan.teamproject.signin">

    <TextView
        android:id="@+id/UsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="29dp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UsernameLabel"
        android:layout_marginLeft="20dp"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="29dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordLabel"
        android:layout_marginLeft="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_below="@+id/password_input"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:onClick="setContentView"
        android:text="@string/signIn_name"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="setContentView"
        android:text="@string/forgot_password"
        android:textColor="@color/black" />
</RelativeLayout>

