...
        android:layout_height="wrap_content"
        android:text="New Text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:textSize="30sp"
        android:id="@+id/profile_greeting_msg_txtView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/service1"
        android:id="@+id/requirement_tracker_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
...
