...

        </LinearLayout>



        <ListView
            android:id="@+id/project_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
...
